--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
+  "homepage": "https://pranithakm.github.io/car",
   "name": "car-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.5",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/react": "^18.2.0",
     "@types/react-router-dom": "^5.3.3",
     "cra-template-typescript": "1.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0",
+    "firebase": "^11.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
+      "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +43,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/firebase": "^2.4.32",
+    "@types/jest": "^29.5.14",
+    "@types/react-dom": "^18.2.0",
+    "@types/react-redux": "^7.1.34",
+    "gh-pages": "^6.3.0",
+    "web-vitals": "^3.5.2"
   }
 }
